--- a/calendar-stylesheet.css
+++ b/calendar-stylesheet.css
@@ -4,6 +4,14 @@
 ::-webkit-scrollbar{
     display: none;
 }
+
+html, body{
+    width: 100%;
+    overflow-x: hidden;
+    padding: 0;
+    margin: 0;
+}
+
 body {
     display: flex;
     flex-direction: column;
@@ -366,7 +374,7 @@ input:focus + .slider {
 
 footer {
     font-size: 10px;
-    width: 100%;
+    
 }
 .footer-container {
     display: flex;
