--- a/cards-revise.css
+++ b/cards-revise.css
@@ -4,6 +4,13 @@
 ::-webkit-scrollbar{
     display: none;
 }
+
+html, body{
+    width: 100%;
+    overflow-x: hidden;
+    padding: 0;
+    margin: 0;
+}
 body {
     display: flex;
     flex-direction: column;
@@ -361,7 +368,7 @@ input:focus + .slider {
 
 footer {
     font-size: 10px;
-    width: 100%;
+    
     margin: 0;
 }
 .footer-container {
@@ -369,7 +376,7 @@ footer {
     background-color: #d3d3d3; 
     color: #000; 
     padding: 10px;
-    width: 100%;
+    
 
 }
 
