--- a/deals-stylesheet.css
+++ b/deals-stylesheet.css
@@ -4,6 +4,14 @@
 ::-webkit-scrollbar{
     display: none;
 }
+
+html, body{
+    width: 100%;
+    overflow-x: hidden;
+    padding: 0;
+    margin: 0;
+}
+
 body {
     display: flex;
     flex-direction: column;
@@ -323,9 +331,9 @@ input:focus + .slider {
     font-weight: bold;
 }
 
-footer {
+.footer {
     font-size: 10px;
-    width: 100%;
+    
 }
 .footer-container {
     display: flex;
