--- a/sign-stylesheet-revise.css
+++ b/sign-stylesheet-revise.css
@@ -10,7 +10,13 @@ body {
     padding: 0;
     margin: 0;
 
+}
 
+html, body{
+    width: 100%;
+    overflow-x: hidden;
+    padding: 0;
+    margin: 0;
 }
 
 .grey { 
@@ -392,7 +398,7 @@ footer {
     background-color: #d3d3d3; 
     color: #000; 
     padding: 10px;
-    width: 100%;
+   
 
 }
 
@@ -806,6 +812,12 @@ footer {
         }
 
 
-
+        .buttons-buttons {
+            display: flex;
+            padding: 0;
+            justify-content: space-between;
+            padding-left: 5%;
+            padding-right: 5%;
+        }
 
     }
