--- a/stylesheet.css
+++ b/stylesheet.css
@@ -1,8 +1,15 @@
 * {
     font-family: 'Inter', sans-serif;
+    border: 1px solid red;
 }
 ::-webkit-scrollbar{
     display: none;
+}
+html, body{
+    width: 100%;
+    overflow-x: hidden;
+    padding: 0;
+    margin: 0;
 }
 body {
     display: flex;
@@ -342,9 +349,9 @@ input:focus + .slider {
 }
 
 
-footer {
+.footer {
     font-size: 10px;
-    width: 100%;
+    
     margin: 0;
 }
 .footer-container {
@@ -352,7 +359,7 @@ footer {
     background-color: #d3d3d3; 
     color: #000; 
     padding: 10px;
-    width: 100%;
+    
 
 }
 
